log
Sun 16 Oct 2022 10:34:30 PM UTC: 
 heap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:10: error: ‘heapArray’ undeclared (first use in this function)
   22 |   return heapArray[0].data;
      |          ^~~~~~~~~
heap.c:22:10: note: each undeclared identifier is reported only once for each function it appears in
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a42a476
Sun 16 Oct 2022 10:34:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
b57b642
Sun 16 Oct 2022 10:37:30 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:18: error: ‘heapArray’ undeclared (first use in this function)
   30 |   while(now>0 && heapArray [(now-1)/2].priority < priority){
      |                  ^~~~~~~~~
heap.c:30:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d5c4f0f
Sun 16 Oct 2022 10:37:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:18: error: ‘heapArray’ undeclared (first use in this function)
   30 |   while(now>0 && heapArray [(now-1)/2].priority < priority){
      |                  ^~~~~~~~~
heap.c:30:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
afd4e85
Sun 16 Oct 2022 10:37:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:31:5: error: ‘heapArray’ undeclared (first use in this function)
   31 |     heapArray[now] = pq->heapArray[(now-1)/2];
      |     ^~~~~~~~~
heap.c:31:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
da7769d
Sun 16 Oct 2022 10:38:02 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
2302a6e
Sun 16 Oct 2022 10:46:46 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:5: error: ‘capac’ undeclared (first use in this function)
   29 |     capac = capac*2 +1;
      |     ^~~~~
heap.c:29:5: note: each undeclared identifier is reported only once for each function it appears in
heap.c:30:36: error: expected expression before ‘heapElem’
   30 |     pq->heapArray = realloc (capac*heapElem);
      |                                    ^~~~~~~~
heap.c:30:21: error: too few arguments to function ‘realloc’
   30 |     pq->heapArray = realloc (capac*heapElem);
      |                     ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
Compilation failed
9070093
Sun 16 Oct 2022 10:47:06 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:5: error: ‘capacidad’ undeclared (first use in this function)
   29 |     capacidad = capacidad*2 +1;
      |     ^~~~~~~~~
heap.c:29:5: note: each undeclared identifier is reported only once for each function it appears in
heap.c:30:40: error: expected expression before ‘heapElem’
   30 |     pq->heapArray = realloc (capacidad*heapElem);
      |                                        ^~~~~~~~
heap.c:30:21: error: too few arguments to function ‘realloc’
   30 |     pq->heapArray = realloc (capacidad*heapElem);
      |                     ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
Compilation failed
3ad73ac
Sun 16 Oct 2022 10:47:55 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:40: error: expected expression before ‘heapElem’
   30 |     pq->heapArray = realloc (pq->capac*heapElem);
      |                                        ^~~~~~~~
heap.c:30:21: error: too few arguments to function ‘realloc’
   30 |     pq->heapArray = realloc (pq->capac*heapElem);
      |                     ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
Compilation failed
5b2ef56
Sun 16 Oct 2022 10:48:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:41: error: expected expression before ‘heapElem’
   30 |     pq->heapArray = realloc* (pq->capac*heapElem);
      |                                         ^~~~~~~~
Compilation failed
0075b4f
Sun 16 Oct 2022 10:48:28 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:43: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘heapElem’
   30 |     pq->heapArray = realloc* (pq->capac*pq->heapElem);
      |                                           ^~
Compilation failed
aae1794
Sun 16 Oct 2022 10:49:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:42: error: expected expression before ‘heapElem’
   30 |     pq->heapArray = realloc* (pq->capac* heapElem);
      |                                          ^~~~~~~~
Compilation failed
c3defbd
Sun 16 Oct 2022 10:54:34 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:42: error: expected expression before ‘heapElem’
   30 |     pq->heapArray = *realloc (pq->capac* heapElem);
      |                                          ^~~~~~~~
heap.c:30:22: error: too few arguments to function ‘realloc’
   30 |     pq->heapArray = *realloc (pq->capac* heapElem);
      |                      ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
Compilation failed
e26756f
